##########################################################################################
##########################################################################################
############################### ProSHADE sources cmake file ##############################
##########################################################################################
##########################################################################################

##########################################################################################
################################### and compile into OBJECTS library
add_library              ( compileObjs OBJECT ${SOURCES}                                  )